# PCC

./: README.md
game/: .gitignore  CMakeLists.txt  Config.json
game/include/: Check.h  Config.h  Game.h  InputHandler.h  Log.h  Maze.h  Render2dFlags.h  Renderer_2d.h  Renderer_3d.h
game/include/logging/: Log_func.h
game/resources/: config.json  help.txt  log_header.txt
game/src/: Check.cpp  Config.cpp  Game.cpp  InputHandler.cpp  Maze.cpp  Render2dFlags.cpp  Renderer_2d.cpp  Renderer_3d.cpp  main.cpp
game/test/: ConfigTest.cpp  InputHandlerTest.cpp  MazeTest.cpp  Renderer_2dTest.cpp
